# erp-qa-kit

./: .gitignore  ACCEPTANCE_CRITERIA.md  ARCHITECTURE.md  CHANGELOG.md  CODEX_GOAL_PROMPT.md  CONSTRAINTS.md  INDEX.md  MANIFEST.in  README.md  README_DRAFT.md  ROADMAP.md  SPEC.md  pyproject.toml  run_tests.py
.github/workflows/: ci.yml
docs/: generic-erp-final-qa-evidence-contract.md  generic-erp-qa-operator-runbook.md  generic-erp-qa-scorecard.md  generic-erp-troubleshooting.md  integrations.md  release-checklist.md  v0.2_ACCEPTANCE_CRITERIA.md  v0.2_ARCHITECTURE.md  v0.2_CODEX_GOAL_PROMPT.md  v0.2_CONSTRAINTS.md  v0.2_DRY_RUN_GUIDE.md  v0.2_EXTRACTOR_STRATEGY.md  v0.2_INDEX.md  v0.2_PLAN.md  v0.2_PROJECT_MEMORY_SPEC.md  v0.2_PROJECT_POLICY_SPEC.md  v0.2_SPEC.md  v0.3_SCREEN_AUDIT_NOTES.md
erpqa/: __init__.py  cli.py
erpqa/adapters/: __init__.py  intake.py
erpqa/adapters/extractors/: __init__.py  backend_static_adapter.py  base.py  csv_adapter.py  frontend_static_adapter.py  json_yaml_adapter.py  markdown_adapter.py  markitdown_adapter.py  pandas_adapter.py  procedure_sql_adapter.py  registry.py  xlsx_image_manifest_adapter.py  xlsx_text_adapter.py
erpqa/core/: __init__.py  compare.py  constants.py  context.py  contracts.py  errors.py  memory.py  module_paths.py  module_scaffold.py  paths.py  policy.py  scaffold.py  sql_safety.py  validation.py  yaml_io.py
erpqa/generators/: __init__.py  frontend_handoff.py  handoff.py  module_contracts.py  sql.py
erpqa/quality/: __init__.py  _common.py  defects.py  environment.py  execution.py  flake.py  impact.py  policy.py  process.py  scaffold.py  test_catalog.py  test_data.py  traceability.py  validator.py
erpqa/reporters/: __init__.py  module_report.py  report.py
erpqa/safety/: __init__.py  approval.py  snapshot.py
erpqa/screen/: __init__.py  audit.py  extractors.py  vision.py
erpqa/triage/: __init__.py  score.py  signoff.py
rule_packs/: pipe_manufacturing_starter.yaml
skills/erp-domain-modeler/: SKILL.md
skills/erp-fix-handoff/: SKILL.md
skills/erp-intake/: SKILL.md
skills/erp-report-generator/: SKILL.md
skills/erp-rule-generator/: SKILL.md
skills/erp-test-generator/: SKILL.md
tests/: helpers.py  test_cli_help_contract.py  test_end_to_end.py  test_final_qa_gate.py  test_final_qa_signoff.py  test_generic_boundary.py  test_generic_impact_rules.py  test_generic_screen_spec_parser.py  test_impact_analysis.py  test_isolation_safety.py  test_no_db.py  test_packaging_smoke.py  test_quality_cli.py  test_quality_policy.py  test_quality_schemas.py  test_release_gate.py  test_screen_audit.py  test_sql_safety.py  test_test_run_ledger.py  test_traceability_matrix.py  test_trust_score.py  test_v02.py  test_validation.py  test_write_containment.py
(+32 files in other folders)
