[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "erp-qa-kit"
version = "0.1.0"
description = "Local file-based ERP data-integrity QA toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6,<7",
]

[project.scripts]
erpqa = "erpqa.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

